--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             <input type="search" placeholder="Busca un producto" class="barraDeBusqueda">
         </div>
         <div class="contenedor_productos">
-            <div id="ruta"></div>
+            <div id="ruta">
+            </div>
         </div>
     </section>
     <footer>
