carrito y login funcional

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li class=""><a href="#productos" class="px-2">Productos</a></li>
                 <li class=""><a href="l" class="px-2">Contacto</a></li>
                 <li class=""><a href="./paginas/carrito.html" class="bi bi-cart-fill px-2 cursor-pointer"></a></li>
-                <li class=""><a href="./paginas/usuario.html" class="bi bi-person-fill px-2 cursor-pointer"></a></li>
+                <li class=""><a href="./paginas/usuarioLogin.html" class="bi bi-person-fill px-2 cursor-pointer"></a></li>
                 <li class=""><a class="bi bi-sun-fill px-2 cursor-pointer" id="icono_modo"></a></li>
             </ul>
         </nav>
