--- a/paginas/usuarioCuenta.html
+++ b/paginas/usuarioCuenta.html
@@ -22,33 +22,7 @@
             </ul>
         </nav>
         <section>
-            <div class="contenedorCuenta">
-                <form id="form" action="">
-                    <h1>Registrate</h1>
-                    <div class="controlInput">
-                        <label for="nombreDeUsuario">Nombre de usuario</label>
-                        <input id="nombreDeUsuario" name="nombreDeUsuario" type="text">
-                        <div class="error"></div>
-                    </div>
-                    <div class="controlInput">
-                        <label for="email">Email</label>
-                        <input id="email" name="nombreDeUsuario" type="text">
-                        <div class="error"></div>
-                    </div>
-                    <div class="controlInput">
-                        <label for="password">Contraseña</label>
-                        <input id="contrasenia" name="contrasenia" type="password">
-                        <div class="error"></div>
-                    </div>
-                    <div class="controlInput">
-                        <label for="password">Contraseña otra vez</label>
-                        <input id="contrasenia2" name="contrasenia2" type="password">
-                        <div class="error"></div>
-                    </div>
-                    <a href="./usuarioLogin.html">Iniciar sesion</a>
-                    <button type="submit" value="register">Registrarse</button>
-                </form>
-            </div>
+            <h1>Cuenta activa ANASHEEE.</h1>
         </section>
         <footer>
             <div class="footer-contenido">
@@ -63,8 +37,3 @@
             </div>
         </footer>
     </header>
-
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script defer src="../js/register.js"></script>
-</body>
-</html>
