Logeo, registro y carrito funcional

--- a/paginas/usuarioCuenta.html
+++ b/paginas/usuarioCuenta.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
         <section>
-            <h1>Cuenta activa ANASHEEE.</h1>
+            <h1>Cuenta activa.</h1>
         </section>
         <footer>
             <div class="footer-contenido">
