--- a/paginas/usuarioCuenta.html
+++ b/paginas/usuarioCuenta.html
@@ -6,6 +6,7 @@
     <title>usuario</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="sweetalert2.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -14,7 +15,7 @@
             <a href="" class="logo">Electronic</a>
             <ul class="nav-list">
                 <li class=""><a href="../index.html" class="px-2">Inicio</a></li>
-                <li class=""><a href="#productos" class="px-2">Productos</a></li>
+                <li class=""><a href="../index.html" class="px-2">Productos</a></li>
                 <li class=""><a href="./usuarioLogin.html" class="px-2">Contacto</a></li>
                 <li class=""><a class="bi bi-cart-fill px-2 cursor-pointer"></a></li>
                 <li class=""><a href="" class="bi bi-person-fill px-2 cursor-pointer"></a></li>
@@ -37,3 +38,7 @@
             </div>
         </footer>
     </header>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script defer src="../js/register.js"></script>
+</body>
+</html>
